# ETL-Constructor-CPP

./: CMakeLists.txt  main.cpp
etl/: structure.cpp
etl/components/: extractors.cpp  extractors.h  loaders.cpp
etl/implementations/: example.cpp
include/etl/: structure.h
include/etl/components/: extractors.h  loaders.h
include/etl/implementations/: example.h
src/etl/: structure.cpp
src/etl/components/: extractors.cpp  loaders.cpp
src/etl/implementations/: example.cpp
